# StarRailAssistant.Neo

./: .gitignore  README.md  information.md  package-lock.json  package.json  requirements.txt
.github/workflows/: publish.yml
Announcement-Server/: info.json
Announcement-Server/announces/en/: beta-announce.md
Announcement-Server/announces/zh/: beta-announce.md  release-announce.md
SRACore/: cli.py
SRACore/operators/: ioperator.py  operator.py
SRACore/util/: encryption.py  sys_util.py  wayland_screenshot.py
scripts/: debug_template_match.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs
src/components/tasks/: CosmicStrifePanel.vue
src/locales/: en-US.ts  zh-CN.ts
src/utils/: configValidator.ts
src/views/: Tasks.vue
tasks/: TrailblazePowerTask.py
